--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Ivã Stival Blog
-description: This blog is to share my projects and studies.
+title: Ivã Stival
+description: My Blog about DataScience and other things.
 github_username: IvaStival
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
